--- a/src/Skills.css
+++ b/src/Skills.css
@@ -1,5 +1,6 @@
 .skills-container {
   font-family: "Space Grotesk";
+  margin-bottom: 10vh;
 }
 
 .skills {
